добавлена ссылка погода

--- a/templates/about.html
+++ b/templates/about.html
@@ -21,4 +21,5 @@
 
 {% block footer %}
     <a href="{{ url_for('index') }}">Контакты</a>
+    <a href="{{ url_for('weather') }}">Погода</a>
 {% endblock %}
