--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-
+    <div class="weather">Погода в Грозном,{{ text }}!</div>
 {% endblock %}
 
 {% block footer %}
