--- a/templates/about.html
+++ b/templates/about.html
@@ -6,10 +6,10 @@
 
 {% block content %}
     <section>
-        <article>
+        <article class="gif">
             <img src="https://rusability.ru/wp-content/uploads/2015/12/gif-prezentatsii.gif" width="100%" height="100%" class="center">
         </article>
-        <article>
+        <article class="gif">
             Блог Мусаева Мансура, тут будет результы моего программирование
             <br> 
             Пока, что-так
